@@ -4,7 +4,7 @@ debian:
     - apt-get update -q -y
     - apt-get -y install python3-dev python3-pip
     - pip3 install numpy cython
-    - python3 setup.py install
+    - pip3 install .
     - pip3 install pytest MDAnalysisTests
     - cd tests
     - pytest --disable-pytest-warnings .
