@@ -8,6 +8,8 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 
 import warnings
+import sys
+import os
 
 from .modules import *
 
@@ -25,6 +27,14 @@ __all__ = [
     'diporder',
     'velocity',
 ]
+
+try:
+    sys.path.append(os.path.join(os.path.expanduser("~"),
+                                 ".maicos/"))
+    from maicos_costum_modules import *
+    __all__ += custom_modules
+except ImportError:
+    pass
 
 __authors__ = "Philip Loche et. al."
 __version__ = "0.2-dev"  # NOTE: keep in sync with VERSION in setup.py
